# pork_scissors_paper_bot

./: .env.example  pyproject.toml  run_my.py
bot/game_1/: buttons.py  handlers.py  states.py
settings/: conf.py
